2013-07-28  Ramon Casero  <rcasero@gmail.com>

	* matlab/add_gerardus_paths.m: (0.1.7)

	- I had forgotten to add CgalToolbox.

	* matlab/CgalToolbox/CgalCheckSelfIntersect.cpp: (0.1.1)

	- Fix bug. I had commented out the "else" line in two "if" blocks,
	so legitimate intersections were being counted as
	self-intersections.

	* Add matlab/CgalToolbox/CgalCheckSelfIntersect.cpp: (0.1.0)
	* Add matlab/CgalToolbox/cgal_check_self_intersect.m: (0.1.0)
	* Add matlab/test/test_cgal_check_self_intersect.m: (0.1.0)
	* matlab/CgalToolbox/CMakeLists.txt: (0.2.7)

	- CGAL_CHECK_SELF_INTERSECT Check for self-intersections in a
	triangular mesh.

	* matlab/VectorWrapper.h: (0.5.2)
	* matlab/ItkToolbox/CMakeLists.txt: (0.6.4)

	- Add partial specialization for
	CGAL::Point_3<CGAL::Exact_predicates_exact_constructions_kernel >.

	- This makes targets downstream, e.g. itk_imfilter(), need to
	compile against gmp.h and mpfr.h. This problem originates in that
	we didn't create an inheritance tree to have a basic
	MatlabImportFilter that only includes basic types, which then we
	can use to create children classes like MatlabImportCgalFilter or
	MatlabImportItkFilter. Anyway, this is not a big problem that we
	need to fix now.

	* CMakeLists.txt: (0.5.2)

	- Fix bug. For linux and MacOS X builds, libraries gmp and mpfr
	are added as targets by hand, as they are built as an external
	project. However, instead of giving the location of the library,
	we were giving the location of their directories. This made the
	linker fail when it tried to link against them.

	- Fix bug. In linux and MacOS X builds, libraries gmp and mpfr
	should be shared libraries rather than static libraries, otherwise
	we cannot link MEX files to them.

	* Delete matlab/ManifoldToolbox/check_sphtrisurf_vertices.m:

	- The math supporting this function is wrong. It's possible to
	create a vertex that created overlaps and has sum of adjacent
	angles = 2*pi. The reason is that when a vertex is moved outside