@@ -1,3 +1,9 @@
+2013-07-29  Ramon Casero  <rcasero@gmail.com>
+
+	* matlab/add_gerardus_paths.m: (0.2.0)
+
+	- Automate adding system paths to DLLs for Windows.
+
 2013-07-28  Ramon Casero  <rcasero@gmail.com>
 
 	* matlab/add_gerardus_paths.m: (0.1.7)
